normal-normal model and tuning beta-binomial model

--- a/defs.tex
+++ b/defs.tex
@@ -57,6 +57,7 @@
 \newcommand{\V}{\operatorname{Var}}
 \newcommand{\med}{\operatorname{med}} % Median
 \newcommand{\mode}{\operatorname{mode}} % Mode
+\newcommand{\logit}{\operatorname{logit}} % Mode
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
