--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -52,3 +52,13 @@
   series={Duxbury advanced series in statistics and decision sciences},
   year={2002},
   publisher={Thomson Learning}}
+
+@inproceedings{2005:quaeghebeurcooman,
+    Address = {Manno},
+    Author = {Quaeghebeur, E. and de Cooman, G.},
+    Booktitle = {ISIPTA '05. Proceedings of the Fourth International Symposium on Imprecise Probabilities and Their Applications},
+    Editor = {Cozman, F. and Nau, R. and Seidenfeld, T.},
+    Pages = {287--296},
+    Publisher = {SIPTA},
+    Title = {Imprecise probability models for inference in exponential families},
+    Year = {2005}}
