--- a/defs.tex
+++ b/defs.tex
@@ -9,10 +9,13 @@
 \newcommand{\dd}{\,\mathrm{d}}
 
 \newcommand{\mbf}[1]{\mathbf{#1}}
-\def\bs#1{\boldsymbol{#1}}
+\newcommand{\bs}[1]{\boldsymbol{#1}}
 
 \newcommand{\X}{\mbf{X}}
 \newcommand{\x}{\mbf{x}}
+
+\newcommand{\btheta}{\bs{\theta}}
+\newcommand{\bpsi}{\bs{\psi}}
 
 \newcommand{\uz}{^{(0)}} % upper zero
 \newcommand{\un}{^{(n)}} % upper n
