finishing the Dirichlet-Multinomial model

--- a/defs.tex
+++ b/defs.tex
@@ -4,6 +4,8 @@
 
 \def\pdc{prior-data conflict}
 
+\def\tra{\ensuremath{{\mbox{\!\scriptsize\textsf{T}}}}}
+
 \newcommand{\reals}{\mathbb{R}}
 
 \newcommand{\dd}{\,\mathrm{d}}
@@ -22,6 +24,8 @@
 
 \def\yz{y\uz}
 \def\yn{y\un}
+\def\byz{\mbf{y}\uz}
+\def\byn{\mbf{y}\un}
 
 \def\yzl{\ul{y}\uz}
 \def\yzu{\ol{y}\uz}
@@ -74,3 +78,4 @@
 \newcommand{\bin}{\operatorname{Binom}} % Binomial Distribution
 \newcommand{\be}{\operatorname{Beta}}   % Beta Distribution
 \newcommand{\B}{\operatorname{B}}   % Beta Function
+\newcommand{\dir}{\operatorname{Dir}}   % Dirichlet Distribution
