common cause motivation

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -13,3 +13,21 @@
       ISBN = {978-3-540-74226-5},
    MRCLASS = {62-01 (62F03 62F10 62J05 62J12)},
   MRNUMBER = {MR2370506}}
+
+@book{united1993doe,
+  title={DOE Fundamentals Handbook: Nuclear physics and reactor theory},
+  author={{United States Department of Energy}},
+  series={DOE fundamentals handbook},
+  url={http://books.google.de/books?id=sITYQgAACAAJ},
+  year={1993},
+  publisher={U.S. Department of Energy}
+}
+
+@misc{1975:reactor:safety:study,
+  author = {{U.S. Nuclear Regulatory Commission}},
+  title = {Reactor safety study: an assessment of accident risk in {U.S.} commercial nuclear power plants},
+  opthowpublished = {},
+  optmonth = {},
+  year = {1975},
+  note = {{NUREG-75/014 (WASH-1400)}},
+}
