--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -31,3 +31,14 @@
   year = {1975},
   note = {{NUREG-75/014 (WASH-1400)}},
 }
+
+@book{2007:robert,
+   author={Robert, Christian P.},
+   title={The {Bayesian} choice : from decision-theoretic foundations to computational implementation},
+   address={New York, NY},
+   publisher={Springer},
+   year={2007},
+   edition={2. ed.},
+   ISBN={978-0-387-71598-8 - 978-0-387-71599-5},
+   series={Springer texts in statistics},
+}
